add tailwind css

--- a/task/templates/task/task_list.html
+++ b/task/templates/task/task_list.html
@@ -2,4 +2,9 @@
 
 {% block content %}
     <h1 class="text-red-700">Tasks list</h1>
+    <h1 class="text-yellow-700">Tasks list</h1>
+    <h1 class="text-blue-700">Tasks list</h1>
+    <h1 class="text-green-700">Tasks list</h1>
+    <h1 class="text-red-700">Tasks </h1>
+    <h1 class="text-blue-700">Tasks </h1>
 {% endblock %}
