--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +12,8 @@
     {% else %}
         <title>Todo APP</title>
     {% endif %}
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
 </head>
 <body>
