--- a/task/templates/task/task_list.html
+++ b/task/templates/task/task_list.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="text-red-700">Tasks list</h1>
+    <div>
+        {% for task in tasks %}
+            <div class="mt-3">
+                <div class="card px-2 border-info">
+                    <div class="card-body py-3 px-2">
+                        <a href="" class="text-primary font-weight-bolder text-decoration-none">{{ task.title }}</a>
+                    </div>
+                    <div class="border-top py-3 px-2">
+                        {{ task.content }}
+                    </div>
+                </div>
+                
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
