--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,29 @@
         <title>Todo APP</title>
     {% endif %}
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
 </head>
 <body>
-    
-    {% block content %}
-    {% endblock %}
+
+    <div class="container">
+        <nav class="navbar navbar-dark bg-dark">
+            <a href="{% url 'home' %}" class="navbar-brand text-white">TodoApp</a>
+            <div class="mr-3">
+                <a href="{% url 'new-task' %}" class="btn btn-info btn-sm px-2">New Task</a>
+                <a href="" class="text-white px-2">Login</a>
+                <a href="" class="text-white px-2">Register</a>
+            </div>
+        </nav>
+        
+        <div class="card mt-2 p-4">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
 </body>
 </html>
