--- a/task/templates/task/task_form.html
+++ b/task/templates/task/task_form.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <form method="post">
-        {{ form.as_p }}
-
-        <input type="submit" class="btn btn-info" value="Submit">
-    </form>
+    <div>
+        <form method="post">
+            {% csrf_token  %}
+            
+            {{ form|crispy }}
+    
+            <input type="submit" class="btn btn-info" value="Submit">
+        </form>
+    </div>
 {% endblock %}
