--- a/task/templates/task/task_list.html
+++ b/task/templates/task/task_list.html
@@ -5,14 +5,16 @@
         {% for task in tasks %}
             <div class="mt-3">
                 <div class="card px-2 border-info">
-                    <div class="card-body py-3 px-2">
-                        <a href="" class="text-primary font-weight-bolder text-decoration-none">{{ task.title }}</a>
+                    <div class="card-body py-2 px-2">                        
+                        <small class="text-muted">{{ task.updated_at }}</small>
                     </div>
-                    <div class="border-top py-3 px-2">
-                        {{ task.content }}
+                    <div class="border-top py-2 px-2">
+                        <h3>
+                            <a href="{% url 'task-detail' task.pk %}" class="text-primary font-weight-bolder text-decoration-none">{{ task.title }}</a>
+                        </h3>
+                        <p class="py-1">{{ task.content }}</p>
                     </div>
-                </div>
-                
+                </div>                
             </div>
         {% endfor %}
     </div>
