update and delete task

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <main role="main" class="container mb-5">
         <nav class="navbar navbar-dark bg-dark">
             <a href="{% url 'home' %}" class="navbar-brand text-white">TodoApp</a>
+            <a href="{% url 'home' %}" class="text-white btn btn-sm btn-success">All Tasks</a>
             <div class="mr-3">
                 <a href="{% url 'new-task' %}" class="btn btn-info btn-sm px-2">New Task</a>
                 <a href="" class="text-white px-2">Login</a>
