--- a/task/templates/task/task_form.html
+++ b/task/templates/task/task_form.html
@@ -2,13 +2,17 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <div>
-        <form method="post">
-            {% csrf_token  %}
+    <div class="mt-3">
+        <div class="card border-info">
+            <div class="card-body">
+                <form method="post">
+                    {% csrf_token  %}
+                    
+                    {{ form|crispy }}
             
-            {{ form|crispy }}
-    
-            <input type="submit" class="btn btn-info" value="Submit">
-        </form>
+                    <input type="submit" class="btn btn-info mt-3" value="Submit">
+                </form>
+            </div>
+        </div>                
     </div>
 {% endblock %}
