--- a/task/templates/task/task_list.html
+++ b/task/templates/task/task_list.html
@@ -1,21 +1,39 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
-        {% for task in tasks %}
-            <div class="mt-3">
-                <div class="card px-2 border-info">
-                    <div class="card-body py-2 px-2">                        
-                        <small class="text-muted">{{ task.updated_at }}</small>
-                    </div>
-                    <div class="border-top py-2 px-2">
-                        <h3>
-                            <a href="{% url 'task-detail' task.pk %}" class="text-primary font-weight-bolder text-decoration-none">{{ task.title }}</a>
-                        </h3>
-                        <p class="py-1">{{ task.content }}</p>
-                    </div>
-                </div>                
-            </div>
-        {% endfor %}
-    </div>
+    {% for task in tasks %}
+        <div class="mt-3">
+            <div class="card px-2 border-info">
+                <div class="card-body py-2 px-2">                        
+                    <small class="text-muted">{{ task.updated_at }}</small>
+                </div>
+                <div class="border-top py-2 px-2">
+                    <h3>
+                        <a href="{% url 'task-detail' task.pk %}" class="text-primary font-weight-bolder text-decoration-none">{{ task.title }}</a>
+                    </h3>
+                    <p class="py-1">{{ task.content }}</p>
+                </div>
+            </div>                
+        </div>
+    {% endfor %}
+
+    {% if is_paginated %}
+        <div class="mt-3">
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-sm btn-info">Previous</a>
+            {% endif %}
+            
+            {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                    <a href="?page={{ num }}" class="btn btn-sm btn-outline-info">{{ num }}</a>
+                {% else %}
+                    <a href="?page={{ num }}" class="btn btn-sm btn-info">{{ num }}</a>
+                {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}" class="btn btn-sm btn-info">Next</a>
+            {% endif %}
+        </div>
+    {% endif %}
 {% endblock %}
