--- a/templates/base.html
+++ b/templates/base.html
@@ -24,13 +24,27 @@
             <a href="{% url 'home' %}" class="text-white btn btn-sm btn-success">All Tasks</a>
             <div class="mr-3">
                 <a href="{% url 'new-task' %}" class="btn btn-info btn-sm px-2">New Task</a>
-                <a href="" class="text-white px-2">Login</a>
-                <a href="" class="text-white px-2">Register</a>
+
+                {% if user.is_authenticated %}
+                    <a href="{% url 'profile' %}" class="text-white px-2">Profile</a>
+                    <a href="{% url 'logout' %}" class="text-white px-2">Logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}" class="text-white px-2">Login</a>
+                    <a href="{% url 'register' %}" class="text-white px-2">Register</a>
+                {% endif %}
             </div>
         </nav>
 
-        <div class="row">
-            <div class="col-md-12">
+        <div class="row mt-3">
+            <div class="col-md-12">                
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+
                 {% block content %}{% endblock %}
             </div>
         </div>
