--- a/user/templates/user/password_reset_complete.html
+++ b/user/templates/user/password_reset_complete.html
@@ -5,14 +5,10 @@
     <div class="mt-3">
         <div class="card border-info">
             <div class="card-body">
-                <form method="POST">
-                    {% csrf_token  %}
-                    
-                    {{ form|crispy }}
-            
-                    <input type="submit" class="btn btn-info mt-3" value="Submit">
-                </form>
-                
+                <div class="alert alert-success">
+                    Password reset successfully
+                </div>
+
                 <a href="{% url 'login' %}">Login</a>
             </div>
         </div>                
