--- a/user/templates/user/reset-password.html
+++ b/user/templates/user/reset-password.html
@@ -10,10 +10,8 @@
                     
                     {{ form|crispy }}
             
-                    <input type="submit" class="btn btn-info mt-3" value="Submit">
+                    <input type="submit" class="btn btn-info mt-3" value="Request password reset">
                 </form>
-                
-                <a href="{% url 'login' %}">Login</a>
             </div>
         </div>                
     </div>
