--- a/task/templates/task/task_detail.html
+++ b/task/templates/task/task_detail.html
@@ -4,8 +4,11 @@
     <div class="card px-2 border-info">
         <div class="card-body py-2 px-2">                        
             <small class="text-muted">{{ task.updated_at }}</small>
-            <a href="{% url 'task-update' task.pk %}" class="btn btn-info btn-sm">Update</a>
-            <a href="{% url 'task-delete' task.pk %}" class="btn btn-danger btn-sm">Delete</a>
+
+            {% if user == task.author %}
+                <a href="{% url 'task-update' task.pk %}" class="btn btn-info btn-sm">Update</a>
+                <a href="{% url 'task-delete' task.pk %}" class="btn btn-danger btn-sm">Delete</a>
+            {% endif %}
         </div>
         <div class="border-top py-2 px-2">
             <h3>{{ task.title }}</h3>
