--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="mt-3">
         <div class="card border-info">
-            <div class="card-body">
+            <div class="card-body pb-2">
                 <form method="POST">
                     {% csrf_token  %}
                     
@@ -12,6 +12,11 @@
             
                     <input type="submit" class="btn btn-info mt-3" value="Submit">
                 </form>
+            </div>
+            
+            <div class="p-3">
+                <a class="" href="{% url 'register' %}">Create an account</a> | 
+                <a class="" href="{% url 'reset-password' %}">Forgot password</a>
             </div>
         </div>                
     </div>
